# deep-learning

./: README.md
Losses/: celoss-vs-nllloss.ipynb
Segmentation/carvana-unet/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Segmentation/carvana-unet/carvana_unet/: __init__.py  dataset.py  features.py  plots.py
Segmentation/carvana-unet/carvana_unet/data/: make_dataset.py
Segmentation/carvana-unet/carvana_unet/modeling/: predict.py  train.py
Segmentation/carvana-unet/notebooks/: 0.01-gpr-data-exploration.ipynb
